# freeswitch

./: configure.ac
src/: switch.c  switch_apr.c  switch_apr_queue.c  switch_console.c  switch_core.c  switch_core_io.c  switch_core_media.c  switch_core_session.c  switch_core_state_machine.c  switch_event.c  switch_ivr_async.c  switch_ivr_bridge.c  switch_loadable_module.c  switch_log.c  switch_rtp.c  switch_time.c  switch_utils.c  switch_xml.c
src/include/: switch_types.h
src/mod/applications/mod_commands/: mod_commands.c
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/endpoints/mod_sofia/: mod_sofia.c  sofia.c  sofia_reg.c
src/mod/lcr/mod_lcr_app/: Makefile.am  mod_lcr_app.c
src/mod/lcr/mod_lcr_asr/: Makefile.am  mod_lcr_asr.c
src/mod/lcr/mod_lcr_test/: Makefile.am  mod_lcr_test.c
src/mod/lcr/mod_lcr_test/test/: lt.c
src/mod/lcr/mod_lcr_xml/: Makefile.am  mod_lcr_xml.c
src/mod/lcr/mod_lcr_xml/conf/autoload_configs/: lcr_xml.conf.xml
tests/unit/: test.sh
